--- a/Dockerfile.azure-pipelines
+++ b/Dockerfile.azure-pipelines
@@ -16,13 +16,13 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -qq --no-install-recommend
     software-properties-common \
     wget
 
-# setup powershell
-# Download the Microsoft repository GPG keys
-RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb
-# Register the Microsoft repository GPG keys
-RUN dpkg -i packages-microsoft-prod.deb
+# # setup powershell
+# # Download the Microsoft repository GPG keys
+# RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb
+# # Register the Microsoft repository GPG keys
+# RUN dpkg -i packages-microsoft-prod.deb
 
-RUN pwsh -v
+# RUN pwsh -v
 
 
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
