--- a/Dockerfile.azure-pipelines
+++ b/Dockerfile.azure-pipelines
@@ -15,13 +15,19 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -qq --no-install-recommend
     software-properties-common \
     wget
 
-# # setup powershell
-# # Download the Microsoft repository GPG keys
-# RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb
-# # Register the Microsoft repository GPG keys
-# RUN dpkg -i packages-microsoft-prod.deb
+# setup powershell
+# Download the Microsoft repository GPG keys
+RUN wget -q https://packages.microsoft.com/config/ubuntu/16.04/packages-microsoft-prod.deb
+# Register the Microsoft repository GPG keys
+RUN dpkg -i packages-microsoft-prod.deb
 
-# RUN pwsh -v
+# Update the list of products
+RUN apt-get update
+
+# Install PowerShell
+RUN apt-get install -y powershell
+
+RUN pwsh -v
 
 
 RUN curl -sL https://aka.ms/InstallAzureCLIDeb | bash
